# teams-grammar-checker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  teams_grammar.py
teams_grammar/: __init__.py  checker.py  clipboard.py  config.py  hotkey.py  tray.py
teams_grammar/ui/: loading.py  suggestion.py
